fix(ModalLayout): send confirmation mobile layout

--- a/assets/css/components/_modals.scss
+++ b/assets/css/components/_modals.scss
@@ -361,7 +361,6 @@
       width: 95vw;
       margin: 5vw 2vw;
     }
-    .total-amounts { width: 100%; }
     [name='sendForm'], [name='requestForm']  {
       label { text-align: left; }
     }
@@ -382,6 +381,11 @@
     .modal-dialog {
       width: 60vw;
     }
+  }
+}
+@media (max-width: 620px) {
+  .bc-modal, .bc-modal.small {
+    .total-amounts { width: 100%; }
   }
 }
 
